k8s/apps/trilium/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: trilium
spec:
  type: ClusterIP
  selector:
    app: trilium
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
